unc-sdk-macros/src/core_impl/code_generator/snapshots/args_return_ref.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 118
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::unc_sdk::env::setup_panic_hook();
    let contract: Hello = ::unc_sdk::env::state_read().unwrap_or_default();
    let result = Hello::method(&contract);
    let result = ::unc_sdk::serde_json::to_vec(&result)
        .expect("Failed to serialize the return value using JSON.");
    ::unc_sdk::env::value_return(&result);
}
