unc-sdk-macros/src/core_impl/code_generator/snapshots/ext_fn_non_bindgen_attrs.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/ext.rs
assertion_line: 183
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_os = "linux")]
pub fn method(self) -> ::unc_sdk::Promise {
    let __args = ::std::vec![];
    ::unc_sdk::Promise::new(self.account_id)
        .function_call_weight(
            ::std::string::String::from("method"),
            __args,
            self.deposit,
            self.static_gas,
            self.gas_weight,
        )
}
