unc-sdk-macros/src/core_impl/code_generator/snapshots/handle_result_borsh.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 308
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::unc_sdk::env::setup_panic_hook();
    let contract: Hello = ::unc_sdk::env::state_read().unwrap_or_default();
    let result = contract.method();
    match result {
        ::std::result::Result::Ok(result) => {
            let result = ::unc_sdk::borsh::to_vec(&result)
                .expect("Failed to serialize the return value using Borsh.");
            ::unc_sdk::env::value_return(&result);
        }
        ::std::result::Result::Err(err) => ::unc_sdk::FunctionError::panic(&err),
    }
}
