unc-sdk-macros/src/core_impl/code_generator/snapshots/handle_result_mut.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 295
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::unc_sdk::env::setup_panic_hook();
    if ::unc_sdk::env::attached_deposit().as_attounc() != 0 {
        ::unc_sdk::env::panic_str("Method method doesn't accept deposit");
    }
    let mut contract: Hello = ::unc_sdk::env::state_read().unwrap_or_default();
    let result = Hello::method(&mut contract);
    match result {
        ::std::result::Result::Ok(result) => {
            let result = ::unc_sdk::serde_json::to_vec(&result)
                .expect("Failed to serialize the return value using JSON.");
            ::unc_sdk::env::value_return(&result);
            ::unc_sdk::env::state_write(&contract);
        }
        ::std::result::Result::Err(err) => ::unc_sdk::FunctionError::panic(&err),
    }
}
